--- a/assets/style.css
+++ b/assets/style.css
@@ -17,4 +17,23 @@ h1
 {
 	display: flex;
 	justify-content: center;
+	align-content: center;
+	border-bottom:2px ridge lightgrey ;
+	padding:10px;
+}
+
+#buttonNewGame
+{
+
+}
+
+#select
+{
+	
+}
+
+#chrono p
+{
+	font-size: 16px;
+	font-weight: 500;
 }
