--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-
 header
 {
 	display: flex;
@@ -33,7 +32,9 @@ h1
 	align-self: center;
 	transition-property: color, filter;
 	transition-duration: .4s;
-	transition-timing-function: ease-out;}
+	transition-timing-function: ease-out;
+
+}
 
 .setupElement:hover
 {
@@ -65,13 +66,21 @@ h1
 {
 	padding: 20px;
 	background: lightgrey;
+	display: flex;
+	justify-content: center;
 }
-
+/*
 #container {
 	display: grid;
 	grid-gap: 1em;
 	grid-template-rows: repeat(var(--grid-rows), 0fr);
 	grid-template-columns: repeat(var(--grid-cols), 0fr);
+}*/
+#container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
 }
 
 .grid-item {
@@ -79,3 +88,10 @@ h1
 	border: 1px solid #ddd;
 	text-align: center;
 }
+
+
+
+
+
+
+
