--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,7 @@ h1
 	font-family: Verdanna;
 }
 
+
 #setup
 {
 	display: flex;
@@ -68,7 +69,9 @@ h1
 }
 
 #container {
-	display: grid;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	grid-gap: 1em;
 	grid-template-rows: repeat(var(--grid-rows), 0fr);
 	grid-template-columns: repeat(var(--grid-cols), 0fr);
@@ -78,4 +81,96 @@ h1
 	padding: 1em;
 	border: 1px solid #ddd;
 	text-align: center;
+}
+
+.hidden {
+	background-image: url("../assets/image/normal.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+
+.safe{
+	background-image: url("../assets/image/flag.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+
+.b0{
+	background-image: url("../assets/image/empty.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+
+.b9{
+	background-image: url("../assets/image/bomb.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+
+
+.b1{
+	background-image: url("../assets/image/1.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+
+.b2{
+	background-image: url("../assets/image/2.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+.b3{
+	background-image: url("../assets/image/3.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+.b4{
+	background-image: url("../assets/image/4.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+.b5{
+	background-image: url("../assets/image/5.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+.b6{
+	background-image: url("../assets/image/6.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+.b7{
+	background-image: url("../assets/image/7.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+
+.b8{
+	background-image: url("../assets/image/8.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
 }
