--- a/assets/style.css
+++ b/assets/style.css
@@ -66,21 +66,16 @@ h1
 {
 	padding: 20px;
 	background: lightgrey;
-	display: flex;
-	justify-content: center;
+
 }
-/*
-#container {
-	display: grid;
-	grid-gap: 1em;
-	grid-template-rows: repeat(var(--grid-rows), 0fr);
-	grid-template-columns: repeat(var(--grid-cols), 0fr);
-}*/
+
 #container {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-content: center;
+	align-items: center;
+	grid-gap: 1em;
+	grid-template-rows: repeat(var(--grid-rows), 0fr);
+	grid-template-columns: repeat(var(--grid-cols), 0fr);
 }
 
 .grid-item {
@@ -89,9 +84,94 @@ h1
 	text-align: center;
 }
 
+.hidden {
+	background-image: url("../assets/image/normal.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+
+.flag{
+	background-image: url("../assets/image/flag.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+
+.b0{
+	background-image: url("../assets/image/empty.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+
+.b9{
+	background-image: url("../assets/image/bomb.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
 
 
+.b1{
+	background-image: url("../assets/image/1.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
 
+.b2{
+	background-image: url("../assets/image/2.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+.b3{
+	background-image: url("../assets/image/3.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+.b4{
+	background-image: url("../assets/image/4.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+.b5{
+	background-image: url("../assets/image/5.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+.b6{
+	background-image: url("../assets/image/6.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
+.b7{
+	background-image: url("../assets/image/7.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
 
-
-
+.b8{
+	background-image: url("../assets/image/8.png");
+	margin: 2px;
+	height: 20px;
+	width: 20px;
+	background-repeat: no-repeat;
+}
