--- a/assets/style.css
+++ b/assets/style.css
@@ -66,8 +66,17 @@ h1
 #game
 {
 	padding: 20px;
-	background: lightgrey;
+ 	background: rgba(0, 0,0, 0);
+ 	display: flex;
+ 	flex-direction: column; 
+	justify-content: center;
+	align-content: center;
+}
 
+#nbBomb
+{
+	align-self: center;
+	padding: 10px;
 }
 
 #container {
@@ -77,6 +86,12 @@ h1
 	grid-gap: 1em;
 	grid-template-rows: repeat(var(--grid-rows), 0fr);
 	grid-template-columns: repeat(var(--grid-cols), 0fr);
+}
+
+.containerRow
+{
+	background: rgba(1, 1, 1, 0.5);
+	border-radius: 4px;
 }
 
 .grid-item {
