update flag et hidden css

--- a/assets/style.css
+++ b/assets/style.css
@@ -106,6 +106,7 @@ h1
 	height: 20px;
 	width: 20px;
 	background-repeat: no-repeat;
+	outline-style: none;
 }
 
 .flag{
@@ -114,7 +115,9 @@ h1
 	height: 20px;
 	width: 20px;
 	background-repeat: no-repeat;
+	outline-style: none;
 }
+
 
 .b0{
 	background-image: url("../assets/image/empty.png");
