--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+
 header
 {
 	display: flex;
@@ -8,10 +10,8 @@ header
 
 h1
 {
-	color: blue;
-	text-decoration: underline;
-	font-size: 40px;
-	font-family: Verdanna;
+	font: 600 2em/1.5 "Oswald";
+	font-size: 50px;
 }
 
 
@@ -199,5 +199,11 @@ h1
 	height: 20px;
 	width: 20px;
 	background-repeat: no-repeat;
+}
+
+#win-loose {
+	align-self: center;
+	position: absolute;
+
 }
 
